// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`watch-file-rename > clean + build fails when a depended-upon file is renamed 1`] = `
[
  "rpc.build[working_dir=.]",
  "  work_queue.handle_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=10]",
  "      build.compile",
  "        build.compile_wave[file_count=7]",
  "          build.compile_file[module=Helper-DaemonTestNS]",
  "          build.compile_file[module=Library]",
  "          build.compile_file[module=Main]",
  "          build.compile_file[module=ModuleWithInterface]",
  "          build.compile_file[module=PostBuild]",
  "            build.js_post_build[command=node post-build.mjs, js_file=packages/with-post-build/src/PostBuild.mjs]",
  "              build.js_post_build_stdout",
  "          build.compile_file[module=Sample]",
  "          build.compile_file[module=Test]",
  "        build.compile_wave[file_count=3]",
  "          build.compile_file[module=App]",
  "          build.compile_file[module=Consumer-DaemonTestNS]",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Root]",
  "rpc.clean[working_dir=.]",
  "  clean.execute[scope=root]",
  "rpc.build[working_dir=.]",
  "  work_queue.handle_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=10]",
  "      build.compile",
  "        build.compile_wave[file_count=8]",
  "          build.compile_file[module=App]",
  "          build.compile_file[module=Helper-DaemonTestNS]",
  "          build.compile_file[module=Library2]",
  "          build.compile_file[module=Main]",
  "          build.compile_file[module=ModuleWithInterface]",
  "          build.compile_file[module=PostBuild]",
  "            build.js_post_build[command=node post-build.mjs, js_file=packages/with-post-build/src/PostBuild.mjs]",
  "              build.js_post_build_stdout",
  "          build.compile_file[module=Sample]",
  "          build.compile_file[module=Test]",
  "      build.compile_error",
]
`;

exports[`watch-file-rename > clean + build handles interface file rename without crash 1`] = `
[
  "rpc.build[working_dir=.]",
  "  work_queue.handle_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=10]",
  "      build.compile",
  "        build.compile_wave[file_count=7]",
  "          build.compile_file[module=Helper-DaemonTestNS]",
  "          build.compile_file[module=Library]",
  "          build.compile_file[module=Main]",
  "          build.compile_file[module=ModuleWithInterface]",
  "          build.compile_file[module=PostBuild]",
  "            build.js_post_build[command=node post-build.mjs, js_file=packages/with-post-build/src/PostBuild.mjs]",
  "              build.js_post_build_stdout",
  "          build.compile_file[module=Sample]",
  "          build.compile_file[module=Test]",
  "        build.compile_wave[file_count=3]",
  "          build.compile_file[module=App]",
  "          build.compile_file[module=Consumer-DaemonTestNS]",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Root]",
  "rpc.clean[working_dir=.]",
  "  clean.execute[scope=root]",
  "rpc.build[working_dir=.]",
  "  work_queue.handle_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=10]",
  "      build.compile",
  "        build.compile_wave[file_count=7]",
  "          build.compile_file[module=Helper-DaemonTestNS]",
  "          build.compile_file[module=Library]",
  "          build.compile_file[module=Main]",
  "          build.compile_file[module=ModuleWithInterface]",
  "          build.compile_file[module=PostBuild]",
  "            build.js_post_build[command=node post-build.mjs, js_file=packages/with-post-build/src/PostBuild.mjs]",
  "              build.js_post_build_stdout",
  "          build.compile_file[module=Sample]",
  "          build.compile_file[module=Test]",
  "        build.compile_wave[file_count=3]",
  "          build.compile_file[module=App]",
  "          build.compile_file[module=Consumer-DaemonTestNS]",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Root]",
]
`;

exports[`watch-file-rename > clean + build recovers when renamed file is renamed back 1`] = `
[
  "rpc.build[working_dir=.]",
  "  work_queue.handle_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=10]",
  "      build.compile",
  "        build.compile_wave[file_count=7]",
  "          build.compile_file[module=Helper-DaemonTestNS]",
  "          build.compile_file[module=Library]",
  "          build.compile_file[module=Main]",
  "          build.compile_file[module=ModuleWithInterface]",
  "          build.compile_file[module=PostBuild]",
  "            build.js_post_build[command=node post-build.mjs, js_file=packages/with-post-build/src/PostBuild.mjs]",
  "              build.js_post_build_stdout",
  "          build.compile_file[module=Sample]",
  "          build.compile_file[module=Test]",
  "        build.compile_wave[file_count=3]",
  "          build.compile_file[module=App]",
  "          build.compile_file[module=Consumer-DaemonTestNS]",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Root]",
  "rpc.clean[working_dir=.]",
  "  clean.execute[scope=root]",
  "rpc.build[working_dir=.]",
  "  work_queue.handle_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=10]",
  "      build.compile",
  "        build.compile_wave[file_count=8]",
  "          build.compile_file[module=App]",
  "          build.compile_file[module=Helper-DaemonTestNS]",
  "          build.compile_file[module=Library2]",
  "          build.compile_file[module=Main]",
  "          build.compile_file[module=ModuleWithInterface]",
  "          build.compile_file[module=PostBuild]",
  "            build.js_post_build[command=node post-build.mjs, js_file=packages/with-post-build/src/PostBuild.mjs]",
  "              build.js_post_build_stdout",
  "          build.compile_file[module=Sample]",
  "          build.compile_file[module=Test]",
  "      build.compile_error",
  "rpc.clean[working_dir=.]",
  "  clean.execute[scope=root]",
  "rpc.build[working_dir=.]",
  "  work_queue.handle_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=10]",
  "      build.compile",
  "        build.compile_wave[file_count=7]",
  "          build.compile_file[module=Helper-DaemonTestNS]",
  "          build.compile_file[module=Library]",
  "          build.compile_file[module=Main]",
  "          build.compile_file[module=ModuleWithInterface]",
  "          build.compile_file[module=PostBuild]",
  "            build.js_post_build[command=node post-build.mjs, js_file=packages/with-post-build/src/PostBuild.mjs]",
  "              build.js_post_build_stdout",
  "          build.compile_file[module=Sample]",
  "          build.compile_file[module=Test]",
  "        build.compile_wave[file_count=3]",
  "          build.compile_file[module=App]",
  "          build.compile_file[module=Consumer-DaemonTestNS]",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Root]",
]
`;

exports[`watch-file-rename > rename detected in watch mode triggers failed rebuild 1`] = `
[
  "rpc.watch[working_dir=.]",
  "  work_queue.watch_initial_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=10]",
  "      build.compile",
  "        build.compile_wave[file_count=7]",
  "          build.compile_file[module=Helper-DaemonTestNS]",
  "          build.compile_file[module=Library]",
  "          build.compile_file[module=Main]",
  "          build.compile_file[module=ModuleWithInterface]",
  "          build.compile_file[module=PostBuild]",
  "            build.js_post_build[command=node post-build.mjs, js_file=packages/with-post-build/src/PostBuild.mjs]",
  "              build.js_post_build_stdout",
  "          build.compile_file[module=Sample]",
  "          build.compile_file[module=Test]",
  "        build.compile_wave[file_count=3]",
  "          build.compile_file[module=App]",
  "          build.compile_file[module=Consumer-DaemonTestNS]",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Root]",
  "  work_queue.handle_file_change_build",
  "    file_change[path=packages/library/src/Library.res, change_type=renamed]",
  "    file_change[path=packages/library/src/Library2.res, change_type=renamed]",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.parse[dirty_modules=1]",
  "    build.compile",
  "      build.compile_wave[file_count=2]",
  "        build.compile_file[module=App]",
  "        build.compile_file[module=Library2]",
  "    build.compile_error",
]
`;

exports[`watch-file-rename > watch mode recovers after renaming file back 1`] = `
[
  "rpc.watch[working_dir=.]",
  "  work_queue.watch_initial_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=10]",
  "      build.compile",
  "        build.compile_wave[file_count=7]",
  "          build.compile_file[module=Helper-DaemonTestNS]",
  "          build.compile_file[module=Library]",
  "          build.compile_file[module=Main]",
  "          build.compile_file[module=ModuleWithInterface]",
  "          build.compile_file[module=PostBuild]",
  "            build.js_post_build[command=node post-build.mjs, js_file=packages/with-post-build/src/PostBuild.mjs]",
  "              build.js_post_build_stdout",
  "          build.compile_file[module=Sample]",
  "          build.compile_file[module=Test]",
  "        build.compile_wave[file_count=3]",
  "          build.compile_file[module=App]",
  "          build.compile_file[module=Consumer-DaemonTestNS]",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Root]",
  "  work_queue.handle_file_change_build",
  "    file_change[path=packages/library/src/Library.res, change_type=renamed]",
  "    file_change[path=packages/library/src/Library2.res, change_type=renamed]",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.parse[dirty_modules=1]",
  "    build.compile",
  "      build.compile_wave[file_count=2]",
  "        build.compile_file[module=App]",
  "        build.compile_file[module=Library2]",
  "    build.compile_error",
  "  work_queue.handle_file_change_build",
  "    file_change[path=packages/library/src/Library2.res, change_type=renamed]",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.parse[dirty_modules=1]",
  "    build.compile",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Library]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=App]",
  "      build.compile_wave[file_count=1]",
]
`;
